inou/prp/tests/errors/import_stmt_dotted.prp
/*
:name: import_stmt_dotted
:type: error
:error: comptime string literal
:help: import "unit" as name
*/

// Task 1m — the statement form is string-literal-only; the old dotted
// module path (`import a.b.c as x`) is rejected
// (docs/contracts/task_1m_plan.md §1).

import a.b.c as x  // locate_error_here
